feat: intermediate JSX representation